[package]
name = "web5-claims-worker"
version = "0.1.0"
authors = ["Christian M <chriamue@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "0.1.2"
http = "0.2"
web5-claims = { path = "../web5-claims" }
worker = "0.0.9"
serde_json = "1"
oauth2 = { version = "4.1", default-features = false, features = ["reqwest"] }
url = { version = "2.1", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
