[package]
name = "web5-claims"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oauth2 = { version = "4.1", default-features = false, features = ["reqwest"] }
url = { version = "2.1", features = ["serde"] }