[package]
name = "web5-claims"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
base58 = "0.2"
chrono = { version = "0.4", default-features = false, features = [
  "wasmbind",
  "js-sys",
] }
did-key = "*"
oauth2 = { version = "4.1", default-features = false, features = ["reqwest"] }
reqwest = { version = "0.11.6", default-features = false, features = [
  "json",
  "blocking",
] }
serde = "1"
serde_jcs = "0.1"
serde_json = "1"
simple-error = "0.2"
url = { version = "2.1", features = ["serde"] }
sha2 = "0.10"
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
identity_iota = { version = "0.6.0" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
identity_iota = { version = "=0.6.0", default-features = false, features = [
  "account",
  "storage-test-suite",
  "unstable-encryption",
  "revocation-bitmap",
] }
